        - new function Coro::State::cctx_max_idle.
        - the default max number of idle C contexts is now 4.
        - (libcoro) try harder to get _setjmp/_longjmp.
        - (libcoro) cleanup and extend the libcoro API to officially
          allow the creation of empty source contexts.
        - very experimental workaround for the totally broken netbsd platform.

4.804 Wed Nov  5 16:36:00 CET 2008
	- Coro::Debug::new_unix_server would not create a non-blocking listening
          socket, sometimes causing freezes.
        - (libcoro) fix misaligned stack points for setjmp and assembly
          methods, which can cause crashes on x86/x86_64 with a sufficiently
          aggressive compiler.
        - new function: Coro::Debug::new_tcp_server.
	- move ->throw into the Coro class because it only works on coro objects.

4.803 Mon Nov  3 17:16:12 CET 2008
	- (libcoro) use a global asm statement to become independent of gcc
          otpimisations for CORO_ASM (thanks to pippijn for the idea).
        - try to workaround yet another broken bsd, this time dragonfly.

4.802 Thu Oct 30 10:56:12 CET 2008
        - support -fno-omit-frame-pointer on x86 with the assembly method.
	- tune 01_unblock.t tests a bit.

4.801 Wed Oct 22 18:33:37 CEST 2008
	- improve readline speed for very long "lines".
	- backport to 5.8.8.

4.8  Thu Oct  2 13:34:40 CEST 2008
	- new function Coro::AIO::aio_wait.
        - Coro.:AIO and Coro::BDB now "use Coro::AnyEvent".
        - greatly speed up and reduce memory usage of Coro::AIO requests.
        - implement some other µ-optimisations.

4.749 Mon Sep 29 14:40:12 CEST 2008
	- port to slow and broken pseudo-threaded perls. (courtesy pippijn).

4.748 Sat Sep 27 14:03:19 CEST 2008
	- implement, but do not document, PerlIO::cede(granularity).
	- Coro::Storable forgot to wrap Storable::pstore.
        - work around the multitude of leaks and memory corruption
          bugs in PerlIO::via by using our own C-level perliol. As a side